--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    </nav>
    </header>
    <hr>
-   <img class="dharun" src="dharun.JPG" >
+   <img class="dharun" src="dharun.jpg" >
    <hr>
    <footer class="foot">
    <ul>
