--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
    <ul class="nav">
    <li><a href="About.html">About</a></li>
    <li><a href="Goals.html">Goals</a></li>
-   <li><a href="hobbies.html">Hobbies</a></li>
-   <li><a href="skills.html">Skills</a></li>
-   <li><a href="character.html">Character</a></li>
+   <li><a href="Hobbies.html">Hobbies</a></li>
+   <li><a href="Skills.html">Skills</a></li>
+   <li><a href="Character.html">Character</a></li>
    </ul>
    </nav>
    </header>
