--- a/Character.html
+++ b/Character.html
@@ -10,7 +10,7 @@
    <li><a href="index.html">Home</a></li>
    <li><a href="About.html">About</a></li>
    <li><a href="Goals.html">Goals</a></li>
-   <li><a href="hobbies.html">Hobbies</a></li>
+   <li><a href="Hobbies.html">Hobbies</a></li>
     <li><a href="Skills.html">Skills</a></li>
    </ul>
    </nav>
