--- a/Goals.html
+++ b/Goals.html
@@ -21,9 +21,9 @@
    <ul class="nav">
    <li><a href="index.html">Home</a></li>
    <li><a href="About.html">About</a></li>
-   <li><a href="hobbies.html">Hobbies</a></li>
-   <li><a href="skills.html">Skills</a></li>
-   <li><a href="character.html">Character</a></li>
+   <li><a href="Hobbies.html">Hobbies</a></li>
+   <li><a href="Skills.html">Skills</a></li>
+   <li><a href="Character.html">Character</a></li>
    </ul>
    </nav>
    </body>
