--- a/Hobbies.html
+++ b/Hobbies.html
@@ -33,8 +33,8 @@
    <li><a href="index.html">Home</a></li>
    <li><a href="About.html">About</a></li>
    <li><a href="Goals.html">Goals</a></li>
-   <li><a href="skills.html">Skills</a></li>
-   <li><a href="character.html">Character</a></li>
+   <li><a href="Skills.html">Skills</a></li>
+   <li><a href="Character.html">Character</a></li>
    </ul>
    </nav>
    
