--- a/Skills.html
+++ b/Skills.html
@@ -16,6 +16,6 @@
    <li><a href="index.html">Home</a></li>
    <li><a href="About.html">About</a></li>
    <li><a href="Goals.html">Goals</a></li>
-   <li><a href="hobbies.html">Hobbies</a></li>
-   <li><a href="character.html">Character</a></li>
+   <li><a href="Hobbies.html">Hobbies</a></li>
+   <li><a href="Character.html">Character</a></li>
    </ul>
