--- a/Character.html
+++ b/Character.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>.com</title>
+<head><title>Character.com</title>
 <link rel="stylesheet" href="Character.css">
 </head>
 <body>
