--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+<title>index.html</title>
   <link rel="stylesheet" href="portfolio.css">
     <h1>Dharunraj-portfolio</h1>
 	
