--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
 </head>
 <body>
  <h3>Self intro</h3>
- <p><b>My self Dharunraj A 😎😉 </b>.I am from Aruppukopttai Virudhunagar district.I completed my SSLC studies S.B.H.Higher Secendary School.Then I completed my HSC Studies is Salilyar Mahagana Higher Secendary School.Then i am contine my college studies is Virudhunagar S.Vellaichamy Nadar Polytechnic College(Autonomous).I completed my 2<sup>nd</sup> year studies then I discontinue my college studies for the reason is I crack this freshworks Software Acadamy interview exams🥳🥳 and my journey is good do go🥰 3<sup>rd</sup> batch in our company.🤩🤩<br><br></p>
+ <p><b>I am Dharunraj A 😎😉 </b>.I am from Aruppukopttai Virudhunagar district.I completed my SSLC studies S.B.H.Higher Secendary School.Then I completed my HSC Studies is Salilyar Mahagana Higher Secendary School.Then i am contine my college studies is Virudhunagar S.Vellaichamy Nadar Polytechnic College(Autonomous).I completed my 2<sup>nd</sup> year studies then I discontinue my college studies for the reason is I crack this freshworks Software Acadamy interview exams🥳🥳 and my journey is good do go🥰 3<sup>rd</sup> batch in our company.🤩🤩<br><br></p>
    <p id="thank">Thank you.</p>
    <nav>
    <ul class="nav">
